# evo-kernel-agent-update

./: .gitignore  Cargo.toml  soul.md
.github/workflows/: release.yml
docs/: update-agent.md
src/: git.rs  main.rs  updater.rs  versions.rs
